--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!--
-Page name: Question 2A - Simple Parallax Tutorial HTML
+Page name: Simple Parallax Tutorial HTML
 Description: Contains the text explaining how to use simpleParallax.js, and
 the images that parallax effects will be applied to.
 -->
