updated site title

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ the images that parallax effects will be applied to.
 <html lang="en">
 <head>
   <link rel="stylesheet" href="./css/styles.css">
-  <title>Assn3Q2A</title>
+  <title>SimpleParallax.js Analysis</title>
   <!-- gets simpleParallax.js using a content delivery network -->
   <script defer src="https://cdn.jsdelivr.net/npm/simple-parallax-js@5.2.0/dist/simpleParallax.min.js"></script>
   <!-- calls JS file containing code that uses the simpleParallax library -->
